--- a/shard.yml
+++ b/shard.yml
@@ -4,6 +4,9 @@ version: 1.0.0
 authors:
   - Akiicat <aaaa1379@gmail.com>
 
+description: |
+  Generate and parse m3u8 playlists for HTTP Live Streaming (HLS).
+
 crystal: 0.24.1
 
 license: MIT
