--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,14 @@ language: crystal
 script:
   - crystal spec
   - crystal tool format --check
+  - crystal docs
     
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  project_name: m3u8
+  keep-history: true
+  on:
+    branch: master
+  local_dir: docs
