--- a/shard.yml
+++ b/shard.yml
@@ -7,6 +7,6 @@ authors:
 description: |
   Generate and parse m3u8 playlists for HTTP Live Streaming (HLS).
 
-crystal: 0.27.0
+crystal: ">= 0.35.0, < 2.0.0"
 
 license: MIT
